AH locations added

--- a/MemBrain_.ipynb
+++ b/MemBrain_.ipynb
@@ -20,7 +20,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "47a7e9cc-255f-4078-91a8-dd96d6989c8e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_url(url, **kwargs):\n",
@@ -2563,17 +2565,89 @@
    ],
    "source": [
     "# export: all 2733 proteins\n",
-    "df_MB.to_csv('./FinalOutput/Results_Whole2733.csv', index=False)\n",
-    "\n",
-    "# export: only proteins with Entry_Hs or Mm was found\n",
-    "df_MB_w_entry = df_MB[(df_MB['Entry_Hs'] != 'Not_found')|(df_MB.Entry_Mm != 'Not_found')]\n",
-    "print(df_MB_w_entry.shape)\n",
-    "df_MB_w_entry.to_csv('./FinalOutput/Results_w_Entry.csv', index=False)"
+    "df_MB.to_csv('./FinalOutput/Results_Whole2733.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d20a990e-9be8-444b-bc10-9f55506dfa34",
+   "metadata": {},
+   "source": [
+    "# 5. AH locations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
+   "id": "3a4ccc7f-5ca5-49a1-8fb7-4f644f45ecad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_MB = pd.read_csv('./FinalOutput/Results_Whole2733.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "0f7860b0-2bf7-42eb-bd9b-1fe187a31760",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_AH(AA_seq, prediction):\n",
+    "    '''\n",
+    "    Return residues that are predicted to be an AH\n",
+    "    as a list of residues and their locations\n",
+    "    Note that there is '\\n' in the end of both AA and prediction strings,\n",
+    "    thus precition[0-1] and predition[last] return non-1 anyway,\n",
+    "    preventing the bug when predciton starts or ends with 1\n",
+    "    '''\n",
+    "    AH_res_loc_dict = dict()\n",
+    "\n",
+    "    for i in range(len(prediction)): # account for the \\n\n",
+    "#         print(i, AA_seq[i])\n",
+    "        if (prediction[i-1] != '1') & (prediction[i] == '1'):\n",
+    "            AH_start = i\n",
+    "\n",
+    "        elif (prediction[i-1] == '1') & (prediction[i] != '1'):\n",
+    "            AH_end = i\n",
+    "            \n",
+    "            # pack AH residues and locations into a dictionary\n",
+    "            AH_res = AA_seq[AH_start:AH_end]\n",
+    "            AH_loc = str(AH_start+1) + '-' + str(AH_end) # residue number is non-pythonic and starts with 1, not 0\n",
+    "            AH_res_loc_dict[AH_res] = AH_loc\n",
+    "\n",
+    "    return AH_res_loc_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "eb45bca5-edca-462c-8e22-cb1c8f9d5e7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_MB['AH_res_and_loc'] = df_MB.apply(lambda x: find_AH(x['AA_sequence'], x['Prediction']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "25e0704b-4e04-49b5-a14a-ebd8d1fad887",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_MB = df_MB[['Entry_original', 'Organism', 'Gene_name', 'Protein_name', 'AH_or_Not',\n",
+    "       'AA_sequence', 'Prediction','AH_res_and_loc', 'Entry_Hs', 'Entry_Mm', 'SubCell_Uniprot',\n",
+    "       'SubCell_HPA', 'HPA_reliability', 'Subcell_Schirmer2003',\n",
+    "       'Subcell_Korfali2010', 'Subcell_Wilkie2010', 'Subcell_Korfali2012',\n",
+    "       'Subcell_Cheng2019', 'Tissue_Korfali_2012', 'NE:MM_ratio_Korfali_2012',\n",
+    "       'NEscore_Undiff_Cheng2019', 'NEscore_Adipo_Cheng2019',\n",
+    "       'NEscore_Myo_Cheng2019']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
    "id": "488fad27-582a-4830-8cdc-ebffead9db7e",
    "metadata": {},
    "outputs": [
@@ -2581,11 +2655,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(235, 22)\n"
+      "(2050, 23)\n",
+      "(235, 23)\n"
      ]
     }
    ],
    "source": [
+    "# export: only proteins with Entry_Hs or Mm was found\n",
+    "df_MB_w_entry = df_MB[(df_MB['Entry_Hs'] != 'Not_found')|(df_MB.Entry_Mm != 'Not_found')]\n",
+    "print(df_MB_w_entry.shape)\n",
+    "df_MB_w_entry.to_csv('./FinalOutput/Results_w_Entry.csv', index=False)\n",
+    "\n",
     "# export: only with NE proteins\n",
     "df_MB_NE = df_MB[(df_MB.SubCell_Uniprot.str.contains('Nucleaus'))|\n",
     "                (df_MB.SubCell_HPA.str.contains('Nucle'))|\n",
