How many evidence for NE loc

--- a/MemBrain_.ipynb
+++ b/MemBrain_.ipynb
@@ -2679,9 +2679,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5e3bd4b-6065-4851-b96d-24a04cdcf8b4",
+   "metadata": {},
+   "source": [
+    "# 6. How much sources for NE localization?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "28136f04-e828-44e5-82c0-32c75842f0e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_MB_NE = pd.read_csv('./FinalOutput/Results_NE.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "8c8ee8ab-bc06-4d3e-b523-558705c90b8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Entry_original', 'Organism', 'Gene_name', 'Protein_name', 'AH_or_Not',\n",
+       "       'AA_sequence', 'Prediction', 'AH_res_and_loc', 'Entry_Hs', 'Entry_Mm',\n",
+       "       'SubCell_Uniprot', 'SubCell_HPA', 'HPA_reliability',\n",
+       "       'Subcell_Schirmer2003', 'Subcell_Korfali2010', 'Subcell_Wilkie2010',\n",
+       "       'Subcell_Korfali2012', 'Subcell_Cheng2019', 'Tissue_Korfali_2012',\n",
+       "       'NE:MM_ratio_Korfali_2012', 'NEscore_Undiff_Cheng2019',\n",
+       "       'NEscore_Adipo_Cheng2019', 'NEscore_Myo_Cheng2019', 'UP_Nuc_ER',\n",
+       "       'HPA_Nuc', 'UP_HPA_evidence', 'Paper_evidence'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_MB_NE.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "f2fade77-a5da-4389-8242-7291555cadfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make a new column to judge if the Uniprot loc info has ER or nuclear loc evidence\n",
+    "df_MB_NE['UP_Nuc_ER'] = df_MB_NE.apply(lambda x: 1 if ('Endoplasmic' in x['SubCell_Uniprot']) | ('Nuclear' in x['SubCell_Uniprot']) else 0, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "8a6f8aed-7fc8-400a-af2b-28f4e7615500",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make a new column to judge if the HPA loc info has nuclear loc evidence\n",
+    "df_MB_NE['HPA_Nuc'] = df_MB_NE.apply(lambda x: 1 if 'Nucle' in x['SubCell_HPA'] else 0, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "9dd4118e-c1df-4871-8397-dd40bac5dcef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make a new column to score if the either UP or HPA has ER (UP alone) or nuclear loc evidence: 2 is both, 1 is either, 0 is neither\n",
+    "df_MB_NE['UP_HPA_evidence'] = df_MB_NE['UP_Nuc_ER'] + df_MB_NE['HPA_Nuc']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "e81d7a7a-4328-40fa-a153-04eb210f41b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make another column to score how much evidence is there in papers\n",
+    "df_MB_NE['Paper_evidence'] \\\n",
+    "= df_MB_NE.apply(lambda x: (x['Subcell_Schirmer2003'] + x['Subcell_Korfali2010'] + x['Subcell_Wilkie2010'] + x['Subcell_Korfali2012'] + x['Subcell_Cheng2019']).count('Nuclear'),\\\n",
+    "                 axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "64ba24b3-5432-4e57-864a-7289be81cb50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# organize columns and export\n",
+    "df_MB_NE = df_MB_NE[['Entry_original', 'Organism', 'Gene_name', 'Protein_name', 'AH_or_Not',\n",
+    "       'AA_sequence', 'Prediction', 'AH_res_and_loc', 'Entry_Hs', 'Entry_Mm',\n",
+    "       'SubCell_Uniprot', 'SubCell_HPA', 'HPA_reliability',\n",
+    "       'Subcell_Schirmer2003', 'Subcell_Korfali2010', 'Subcell_Wilkie2010',\n",
+    "       'Subcell_Korfali2012', 'Subcell_Cheng2019', 'Tissue_Korfali_2012',\n",
+    "       'NE:MM_ratio_Korfali_2012', 'NEscore_Undiff_Cheng2019',\n",
+    "       'NEscore_Adipo_Cheng2019', 'NEscore_Myo_Cheng2019', 'UP_HPA_evidence', 'Paper_evidence']]\n",
+    "\n",
+    "df_MB_NE.to_csv('./FinalOutput/Results_NE.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb76ac04-6f60-4838-b8e2-61d219bc95ca",
+   "id": "841cdf00-0d16-49d3-984b-330f31ed9359",
    "metadata": {},
    "outputs": [],
    "source": []
