--- a/MemBrain_.ipynb
+++ b/MemBrain_.ipynb
@@ -2688,7 +2688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "id": "28136f04-e828-44e5-82c0-32c75842f0e6",
    "metadata": {},
    "outputs": [],
@@ -2698,7 +2698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "id": "8c8ee8ab-bc06-4d3e-b523-558705c90b8a",
    "metadata": {},
    "outputs": [
@@ -2711,12 +2711,12 @@
        "       'Subcell_Schirmer2003', 'Subcell_Korfali2010', 'Subcell_Wilkie2010',\n",
        "       'Subcell_Korfali2012', 'Subcell_Cheng2019', 'Tissue_Korfali_2012',\n",
        "       'NE:MM_ratio_Korfali_2012', 'NEscore_Undiff_Cheng2019',\n",
-       "       'NEscore_Adipo_Cheng2019', 'NEscore_Myo_Cheng2019', 'UP_Nuc_ER',\n",
-       "       'HPA_Nuc', 'UP_HPA_evidence', 'Paper_evidence'],\n",
+       "       'NEscore_Adipo_Cheng2019', 'NEscore_Myo_Cheng2019', 'UP_HPA_evidence',\n",
+       "       'Paper_evidence', 'UP_Nuc_ER', 'HPA_Nuc', 'NE_evidence_Tier'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2727,7 +2727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "id": "f2fade77-a5da-4389-8242-7291555cadfa",
    "metadata": {},
    "outputs": [],
@@ -2738,7 +2738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "id": "8a6f8aed-7fc8-400a-af2b-28f4e7615500",
    "metadata": {},
    "outputs": [],
@@ -2749,7 +2749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "id": "9dd4118e-c1df-4871-8397-dd40bac5dcef",
    "metadata": {},
    "outputs": [],
@@ -2760,7 +2760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "id": "e81d7a7a-4328-40fa-a153-04eb210f41b4",
    "metadata": {},
    "outputs": [],
@@ -2773,7 +2773,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 37,
+   "id": "608680da-217e-4a07-9c97-d787e01901f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tier 1-3 classification\n",
+    "df_MB_NE['NE_evidence_Tier'] = df_MB_NE.apply(lambda x: 1 if x['Paper_evidence'] >= 2 else (2 if ((x['UP_HPA_evidence'] >= 1)&(x['Paper_evidence'] == 1)) else 3), axis=1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "64ba24b3-5432-4e57-864a-7289be81cb50",
    "metadata": {},
    "outputs": [],
@@ -2785,7 +2796,7 @@
     "       'Subcell_Schirmer2003', 'Subcell_Korfali2010', 'Subcell_Wilkie2010',\n",
     "       'Subcell_Korfali2012', 'Subcell_Cheng2019', 'Tissue_Korfali_2012',\n",
     "       'NE:MM_ratio_Korfali_2012', 'NEscore_Undiff_Cheng2019',\n",
-    "       'NEscore_Adipo_Cheng2019', 'NEscore_Myo_Cheng2019', 'UP_HPA_evidence', 'Paper_evidence']]\n",
+    "       'NEscore_Adipo_Cheng2019', 'NEscore_Myo_Cheng2019', 'UP_HPA_evidence', 'Paper_evidence', 'NE_evidence_Tier']]\n",
     "\n",
     "df_MB_NE.to_csv('./FinalOutput/Results_NE.csv', index=False)"
    ]
