Finalized AH and non-AH NE proteins

--- a/Merge_MemBrain_NEproteins.ipynb
+++ b/Merge_MemBrain_NEproteins.ipynb
@@ -9,7 +9,8 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from my_utils import find_AH"
    ]
   },
   {
@@ -22,64 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "00380c81-12b0-4db7-b247-f3aaaa178145",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_MB = pd.read_csv('./IntermediateProducts/Results_step_3.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "e4fcfe59-a45e-412d-91a9-acd3b63188af",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Remove Not_found or Not_found(similar)\n",
-    "df_MB = df_MB[(df_MB.Entry_Hs != \"Not_found\") & (df_MB.Entry_Hs != \"Not_found(similar)\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "3eaf5c76-ad94-41c9-b075-767b221e805a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_MB = df_MB.drop(columns=['SubCell_Uniprot'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "197c52c8-63e0-4797-ad5a-067613c1f13d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Remove duplicates\n",
-    "# Make sure Human entries come first by placing 1 to them and 2 to the others and sorting\n",
-    "# This way a row with Hs ID in Entry_original will be retained\n",
-    "# a row is removed if it had a non-human ID originally that was converted to the same Hs entry\n",
-    "df_MB['Human?'] = df_MB['Organism'].apply(lambda x: 1 if x == 'Homo sapiens' else 2)\n",
-    "df_MB_sorted = df_MB.sort_values(by='Human?')\n",
-    "df_MB_cleaned = df_MB_sorted.drop_duplicates(subset='Entry_Hs')\n",
-    "df_MB_cleaned.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "8b671b1e-e5a9-4352-b359-6aac7ffe436b",
+   "execution_count": 23,
+   "id": "80eee39f-cf77-406c-8069-5b4a62c15e23",
    "metadata": {
     "tags": []
    },
@@ -93,6 +38,21 @@
     }
    ],
    "source": [
+    "df_MB = pd.read_csv('./IntermediateProducts/Results_step_3.csv')\n",
+    "\n",
+    "# Remove Not_found or Not_found(similar)\n",
+    "df_MB = df_MB[(df_MB.Entry_Hs != \"Not_found\") & (df_MB.Entry_Hs != \"Not_found(similar)\")]\n",
+    "\n",
+    "df_MB = df_MB.drop(columns=['SubCell_Uniprot'])\n",
+    "\n",
+    "# Remove duplicates\n",
+    "# Make sure Human entries come first by placing 1 to them and 2 to the others and sorting\n",
+    "# This way a row with Hs ID in Entry_original will be retained\n",
+    "# a row is removed if it had a non-human ID originally that was converted to the same Hs entry\n",
+    "df_MB['Human?'] = df_MB['Organism'].apply(lambda x: 1 if x == 'Homo sapiens' else 2)\n",
+    "df_MB_sorted = df_MB.sort_values(by='Human?')\n",
+    "df_MB_cleaned = df_MB_sorted.drop_duplicates(subset='Entry_Hs')\n",
+    "\n",
     "print(\"Total number of human proteins in MemBrain: \", len(df_MB.Entry_Hs.unique()))"
    ]
   },
@@ -106,94 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "f253488b-d7ec-46be-a62f-8c336081fd21",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_NE = pd.read_csv('./SourceData/Final_NE_proteins.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "5b9ddcd8-84a2-44db-b91a-83a3a80c44ec",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 281 entries, 0 to 280\n",
-      "Data columns (total 18 columns):\n",
-      " #   Column                    Non-Null Count  Dtype  \n",
-      "---  ------                    --------------  -----  \n",
-      " 0   UniprotID                 281 non-null    object \n",
-      " 1   GeneName                  281 non-null    object \n",
-      " 2   Schirmer_2003             281 non-null    float64\n",
-      " 3   Korfali_2010              281 non-null    float64\n",
-      " 4   Wilkie_2010               281 non-null    float64\n",
-      " 5   Korfali_2012              281 non-null    float64\n",
-      " 6   Korfali_2012_NE:MM-ratio  281 non-null    float64\n",
-      " 7   Cheng_2019                281 non-null    float64\n",
-      " 8   Cheng_2019_Score:Undiff   281 non-null    float64\n",
-      " 9   Cheng_2019_Score:Adipo    281 non-null    float64\n",
-      " 10  Cheng_2019_Score:Myo      281 non-null    float64\n",
-      " 11  #ProteomePapers           281 non-null    float64\n",
-      " 12  HPA                       281 non-null    int64  \n",
-      " 13  HPA_reliability           281 non-null    object \n",
-      " 14  HPA_loc                   281 non-null    object \n",
-      " 15  Results                   281 non-null    object \n",
-      " 16  Uniprot_NEorER            281 non-null    float64\n",
-      " 17  Uniprot_subcell           277 non-null    object \n",
-      "dtypes: float64(11), int64(1), object(6)\n",
-      "memory usage: 39.6+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_NE.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "e30b50b0-b376-494b-926e-5f5eb2f507d9",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_merged = df_MB_cleaned.merge(df_NE, left_on='Entry_Hs', right_on='UniprotID', how='inner')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "4c0288cb-84dc-4234-96a1-ab59cb507013",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_merged = df_merged[['Entry_original', 'Organism', 'Entry_Hs', 'Gene_name', 'Protein_name', 'AH_or_Not',\n",
-    "       'AA_sequence', 'Prediction',\n",
-    "       'Schirmer_2003', 'Korfali_2010', 'Wilkie_2010',\n",
-    "       'Korfali_2012', 'Korfali_2012_NE:MM-ratio', 'Cheng_2019',\n",
-    "       'Cheng_2019_Score:Undiff', 'Cheng_2019_Score:Adipo',\n",
-    "       'Cheng_2019_Score:Myo', '#ProteomePapers', 'HPA', 'HPA_reliability',\n",
-    "       'HPA_loc', 'Uniprot_NEorER', 'Uniprot_subcell', 'Results']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "89b0659e-c29f-48d4-9608-a7681a9dfa37",
+   "execution_count": 24,
+   "id": "ce54ce20-2f10-49e0-a274-c06da609329d",
    "metadata": {
     "tags": []
    },
@@ -207,12 +81,27 @@
     }
    ],
    "source": [
+    "# NE protein list copied from Nuclear Proteome respository\n",
+    "df_NE = pd.read_csv('./SourceData/Final_NE_proteins.csv')\n",
+    "\n",
+    "# Merge\n",
+    "df_merged = df_MB_cleaned.merge(df_NE, left_on='Entry_Hs', right_on='UniprotID', how='inner')\n",
+    "\n",
+    "# Select columns\n",
+    "df_merged = df_merged[['Entry_original', 'Organism', 'Entry_Hs', 'Gene_name', 'Protein_name', 'AH_or_Not',\n",
+    "       'AA_sequence', 'Prediction',\n",
+    "       'Schirmer_2003', 'Korfali_2010', 'Wilkie_2010',\n",
+    "       'Korfali_2012', 'Korfali_2012_NE:MM-ratio', 'Cheng_2019',\n",
+    "       'Cheng_2019_Score:Undiff', 'Cheng_2019_Score:Adipo',\n",
+    "       'Cheng_2019_Score:Myo', '#ProteomePapers', 'HPA', 'HPA_reliability',\n",
+    "       'HPA_loc', 'Uniprot_NEorER', 'Uniprot_subcell', 'Results']]\n",
+    "\n",
     "print(\"NE proteins with MemBrain result: \", len(df_merged))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "id": "46241ac1-79aa-4a1d-b045-2862809b417d",
    "metadata": {
     "tags": []
@@ -233,7 +122,7 @@
     }
    ],
    "source": [
-    "df_NE_AH = df_merged[df_merged.AH_or_Not == 'AH']\n",
+    "df_NE_AH = df_merged[df_merged.AH_or_Not == 'AH'].copy()\n",
     "\n",
     "print(\"NE proteins with predicted AH: \", len(df_NE_AH))\n",
     "print(\"Breakdown: \")\n",
@@ -244,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "id": "9a7888bb-f1bd-41a5-8d9f-930b3a16bd31",
    "metadata": {
     "tags": []
@@ -273,6 +162,95 @@
     "for i in [1,2,3,4,5]:\n",
     "    print(f\"  {len(df_NE_NonAH[df_NE_NonAH['#ProteomePapers'] == i])} proteins are supoorted by {i} proteome papers\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7dfb7681-58e6-40f5-8ba8-619c6e360940",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_NE_NonAH.to_csv('./FinalOutput/Non-AH_NEproteins.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23908e22-24e4-40dd-8083-b43577b621ae",
+   "metadata": {},
+   "source": [
+    "### 3. AH analysis and export"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "78a82c22-60cb-4896-b5cb-3517ec2956d3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63 proteins are predicted to have 1 AH\n",
+      "24 proteins are predicted to have 2 AH\n",
+      "0 proteins are predicted to have 3 AH\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make a dict with AH residues and its location like {'RMIAQKISVR': '289-298'}\n",
+    "df_NE_AH.loc[:, 'Predicted_AHs'] = df_NE_AH.apply(lambda x: find_AH(x['AA_sequence'], x['Prediction']), axis=1)\n",
+    "# Count the number of AHs per protein\n",
+    "df_NE_AH.loc[:, '#ofAHs'] = df_NE_AH.Predicted_AHs.apply(len)\n",
+    "\n",
+    "# How many proteins have how many predicted AHs?\n",
+    "for i in [1, 2, 3]:\n",
+    "    print(f\"{len(df_NE_AH[df_NE_AH['#ofAHs'] == i])} proteins are predicted to have {i} AH\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "76d8868f-6428-4d05-a71c-1853af772cec",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_NE_AH = df_NE_AH[['Entry_original', 'Organism', 'Entry_Hs', 'Gene_name', 'Protein_name',\n",
+    "       'AA_sequence', 'Prediction', 'Predicted_AHs', '#ofAHs', \n",
+    "       'Schirmer_2003', 'Korfali_2010', 'Wilkie_2010', 'Korfali_2012',\n",
+    "       'Korfali_2012_NE:MM-ratio', 'Cheng_2019', 'Cheng_2019_Score:Undiff',\n",
+    "       'Cheng_2019_Score:Adipo', 'Cheng_2019_Score:Myo', '#ProteomePapers',\n",
+    "       'HPA', 'HPA_reliability', 'HPA_loc', 'Uniprot_NEorER',\n",
+    "       'Uniprot_subcell', 'Results']]\n",
+    "\n",
+    "df_NE_AH = df_NE_AH.rename(columns={'Organism': 'Organism_original', 'Results': 'Uniprot_raw_response'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "2b3a09c0-c242-4748-8f63-a5d2c99550e2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_NE_AH.to_csv('./FinalOutput/AH_NEproteins.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "212cc40d-ff7b-4d91-a791-88e5586f3d1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
