1865 protein list created

--- a/Merge_MemBrain_NEproteins.ipynb
+++ b/Merge_MemBrain_NEproteins.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "80eee39f-cf77-406c-8069-5b4a62c15e23",
    "metadata": {
     "tags": []
@@ -54,6 +54,16 @@
     "df_MB_cleaned = df_MB_sorted.drop_duplicates(subset='Entry_Hs')\n",
     "\n",
     "print(\"Total number of human proteins in MemBrain: \", len(df_MB.Entry_Hs.unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7294e9b5-95f6-41cd-8dc4-d1cc511839d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_MB_cleaned.to_csv('./FinalOutput/MemBrain_Hs_cleaned.csv', index=False)"
    ]
   },
   {
@@ -269,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
