Updated with updated NE proteome - TMEM199 was removed from AH NE proteins as a result

--- a/Merge_MemBrain_NEproteins.ipynb
+++ b/Merge_MemBrain_NEproteins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f2c8ed81-50e2-473d-9b43-e2e8b971727a",
    "metadata": {
     "tags": []
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "80eee39f-cf77-406c-8069-5b4a62c15e23",
    "metadata": {
     "tags": []
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of human proteins in MemBrain:  1865\n"
+      "Total number of human proteins in MemBrain:  1862\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "7294e9b5-95f6-41cd-8dc4-d1cc511839d9",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "ce54ce20-2f10-49e0-a274-c06da609329d",
    "metadata": {
     "tags": []
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NE proteins with MemBrain result:  120\n"
+      "NE proteins with MemBrain result:  119\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "46241ac1-79aa-4a1d-b045-2862809b417d",
    "metadata": {
     "tags": []
@@ -121,10 +121,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NE proteins with predicted AH:  87\n",
+      "NE proteins with predicted AH:  86\n",
       "Breakdown: \n",
       "  48 proteins are supoorted by 1 proteome papers\n",
-      "  10 proteins are supoorted by 2 proteome papers\n",
+      "  9 proteins are supoorted by 2 proteome papers\n",
       "  12 proteins are supoorted by 3 proteome papers\n",
       "  15 proteins are supoorted by 4 proteome papers\n",
       "  2 proteins are supoorted by 5 proteome papers\n"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "9a7888bb-f1bd-41a5-8d9f-930b3a16bd31",
    "metadata": {
     "tags": []
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "7dfb7681-58e6-40f5-8ba8-619c6e360940",
    "metadata": {
     "tags": []
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "78a82c22-60cb-4896-b5cb-3517ec2956d3",
    "metadata": {
     "tags": []
@@ -205,7 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "63 proteins are predicted to have 1 AH\n",
+      "62 proteins are predicted to have 1 AH\n",
       "24 proteins are predicted to have 2 AH\n",
       "0 proteins are predicted to have 3 AH\n"
      ]
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "id": "76d8868f-6428-4d05-a71c-1853af772cec",
    "metadata": {
     "tags": []
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "id": "2b3a09c0-c242-4748-8f63-a5d2c99550e2",
    "metadata": {
     "tags": []
@@ -265,7 +265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -279,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
